# field_friend

./: .env_example  .gitignore  .gitmodules  .pre-commit-config.yaml  .syncignore  404.html  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile_example_root  Dockerfile_example_zauberzeug  Dockerfile_zauberzeug_base  LICENSE  README.md  __init__.py  camera_test.py  docker-compose.jetson.orin.yml  docker-compose.jetson.orin.zedxmini.yml  docker-compose.jetson.yml  docker-compose.yml  docker.sh  docker_jp6.sh  fetch_milestone.py  field_friend.automations.field_provider.json  field_friend.code-workspace  generate_reference.py  index.html  issues.md  lizard.txt  log.py  main.py  mkdocs.yml  mkdocs_requirements.txt  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  (+8 more)
.cursor/rules/: coding.mdc  general.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
assets/: field_friend.stl  field_friend_xl_left.stl  field_friend_xl_right.stl
automations/: __init__.py  coin_collecting.py  coin_detection.py  plant.py  plant_detection.py  plant_provider.py  weeding.py
backup/: backup.sh  restore.sh
backup/f13/: field_friend.automations.field_provider.json  field_friend.automations.implements.weeding.json  field_friend.automations.kpi_provider.json  field_friend.automations.mowing.json  field_friend.automations.navigation.a_b_line_navigation.json  field_friend.automations.navigation.coverage_navigation.json  field_friend.automations.navigation.field_navigation.json  field_friend.automations.navigation.row_on_field_navigation.json  field_friend.automations.path_provider.json  field_friend.automations.plant_locator.json  field_friend.automations.plant_provider.json  field_friend.automations.weeding.json  field_friend.interface.components.log_monitor.json  field_friend.localization.gnss_hardware.json  field_friend.system.json  field_friend.vision.calibratable_usb_camera_provider.json  rosys.pathplanning.path_planner.json  rosys.vision.mjpeg_camera.mjpeg_camera_provider.json
backup/f18/: field_friend.automations.implements.weeding_screw.json  field_friend.automations.kpi_provider.json  field_friend.automations.navigation.straight_line_navigation.json  field_friend.automations.plant_locator.json  field_friend.system.json  field_friend.vision.calibratable_usb_camera_provider.json  rosys.config.json  rosys.vision.mjpeg_camera.mjpeg_camera_provider.json
backup/rb27/: field_friend.automations.field_provider.json  field_friend.automations.kpi_provider.json  field_friend.automations.weeding.json  field_friend.navigation.gnss.json  field_friend.vision.usb_cam_provider.json  rosys.pathplanning.path_planner.json  rosys.vision.mjpeg_camera.mjpeg_camera_provider.json
backup/rb28/: _field_friend.vision.calibratable_usb_camera_provider.json  backup.camera.json  field_friend.automations.field_provider.json  field_friend.automations.followme.json  field_friend.automations.implements.weeding.json  field_friend.automations.kpi_provider.json  field_friend.automations.monitoring.json  field_friend.automations.mowing.json  field_friend.automations.navigation.field_navigation.json  field_friend.automations.navigation.follow_crops_navigation.json  field_friend.automations.navigation.row_on_field_navigation.json  field_friend.automations.navigation.straight_line_navigation.json  field_friend.automations.path_provider.json  field_friend.log_monitor.json  (+12 more)
config/: __init__.py  config_rb28.py  config_rb30.py  config_rb31.py  config_rb32.py  config_selection.py  config_z38.py  config_z39.py  configuration.py  f12.py  f13.py  f14.py  f15.py  f19.py  f20.py  f21.py  f22.py  f23.py  f24.py  f3.py  u4.py  u5.py  u6.py
contributing/: index.html
docker/: docker-compose.nvidia.yml  docker-compose.yml  docker.sh
docs/: contributing.md  generate_reference.py  getting_started.md  index.md  run_macros.py  troubleshooting.md
field_friend/: __init__.py  app_controls.py  capture.py  file_recorder.py  info.py  kpi_generator.py  log_configuration.py  robot_locator.py  swam_connection.py  system.py
getting_started/: index.html
hardware/: __init__.py  bms.py  camera_selector.py  robot.py  robot_hardware.py  robot_simulation.py  simulation.py
interface/: __init__.py  calibration_dialog.py  camera.py  development.py  navigation_bar.py  operation.py  plant_object.py  robot.py  robot_object.py
odrive/: calibrate_chop_motors.py  calibrate_hosqvana.py  calibrate_hosqvana_third_motor.py  calibrate_mirroring_left.py  calibrate_test.py  calibrate_two_motors_joko.py  calibrate_two_motors_l.py  calibrate_two_motors_r.py  calibration.liz  flash_odrive.sh
rplidar/: Makefile  main.cpp
search/: search_index.json
tests/: README.md  conftest.py  old_field_provider_persistence.json  old_field_provider_persistence_with_errors.json  test_cpu.py  test_field_creator.py  test_field_navigation.py  test_field_provider.py  test_fields_api.py  test_geo.py  test_gnss.py  test_navigation.py  test_plant_provider.py  test_recorder.py  test_waypoint_navigation.py  test_weeding.py
troubleshooting/: index.html
(+518 files in other folders)
